--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -1,1 +1,8 @@
 @import url('https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css');
+
+
+
+ul {
+    list-style-type: none;
+}
+
