--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -16,7 +16,7 @@ jobImg img {
 }
 
 .myPic {
-  max-width: 36rem;
+  max-width: 20rem;
   float: right;
 }
 
@@ -26,7 +26,7 @@ jobImg img {
 
 .myLinks {
   margin-top: -28%;
-  position: absolute;
+  position: relative;
   margin-left: 10%;
 }
 
@@ -36,12 +36,20 @@ jobImg img {
 
 .myImage {
   margin-top: 50px;
+  margin-bottom:35px;
   float:right;
-  position: relative;
+
+
 }
 
 .jumbotron {
   margin: 0;
+  background-image: url(/static/media/Matt1.a9badfee.jpg);
+  /* background-position: 11% 32px; */
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
 }
 
 .proTitle{
@@ -49,7 +57,9 @@ jobImg img {
   margin:0;
 
 }
-
-.jobRow{
-  position:absolute;
+.job{
+  margin-top:30px;
 }
+
+
+
