--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -44,7 +44,7 @@ jobImg img {
 
 .jumbotron {
   margin: 0;
-  background-image: url(/static/media/Matt1.a9badfee.jpg);
+  background-image: url("../images/Matt1.jpg");
   /* background-position: 11% 32px; */
   background-size: 100% 100%;
   background-repeat: no-repeat;
