--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -4,9 +4,9 @@ ul {
   list-style-type: none;
 }
 
-jobImg img {
+/* .jobImg img {
   max-height: 34rem;
-}
+} */
 
 .jobsList:nth-child(odd) {
   background-color: #e8ecef;
@@ -25,9 +25,8 @@ jobImg img {
 }
 
 .myLinks {
-  margin-top: -28%;
   position: relative;
-  margin-left: 10%;
+  bottom: 0;
 }
 
 .myJobs {
@@ -36,31 +35,19 @@ jobImg img {
 
 .myImage {
   margin-top: 50px;
-  margin-bottom:35px;
-  float:right;
-
-
+  margin-bottom: 35px;
+  float: right;
 }
 
 .jumbotron {
   margin: 0;
-  background-image: url("../images/Matt1.jpg");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 690px;
-
+position: relative;
 }
 
-
-.proTitle{
+.proTitle {
   background-color: #e8ecef;
-  margin:0;
-
+  margin: 0;
 }
-.job{
-  margin-top:30px;
+.job {
+  margin-top: 30px;
 }
-
-
-
