--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -1,71 +1,76 @@
 @import url("https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css");
 
 ul {
-  list-style-type: none;
+	list-style-type: none;
 }
 
-body{
-  background-color: #E8ECEF;
-  font-family: "comic sans ms"
+body {
+	background-color: #e8ecef;
+	font-family: "comic sans ms";
 }
-
-
 
 .myPic {
-  max-width: 20rem;
-  float: right;
+	max-width: 20rem;
+	float: right;
 }
 
 .social {
-  max-width: 94px;
-  margin-right: 5%;
+	max-width: 94px;
+	margin-right: 5%;
 }
 
 .myLinks {
-  position: relative;
-  margin: auto;
-  
+	position: relative;
+	margin: auto;
 }
 
 .myJobs {
-  padding: 0;
+	padding: 0;
 }
 
 .myImage {
-  margin-top: 50px;
-  float: right;
+	margin-top: 50px;
+	float: right;
 }
 
 .title {
-  background-color: #e8ecef;
-  margin: 0;
+	background-color: #e8ecef;
+	margin: 0;
 }
 .job {
-  margin-top: 30px;
+	margin-top: 30px;
 }
 .jumbotron {
-  margin: 0;
-  position: relative;
+	margin: 0;
+	position: relative;
 }
 
 .jumbotron button {
-  margin-bottom: 31%;
-  padding: 12px;
-  margin-left: 10%;
-  margin-top: 10px;
+	margin-bottom: 31%;
+	padding: 12px;
+	margin-left: 10%;
+	margin-top: 10px;
 }
 
-
-nav{
-  background-color: #E8ECEF;
+nav {
+	background-color: #e8ecef;
 }
 
-.emptySpace{
-  background-color: #E8ECEF;
+.emptySpace {
+	background-color: #e8ecef;
 }
 
-.schools{
-  margin-left: 10%;
-  margin-top:5%;
+.schools {
+	margin-left: 10%;
+	margin: 0;
 }
 
+.footer {
+	background: #5f5f5f;
+	color: white;
+	padding: 10px;
+}
+
+.footerText{
+  margin:auto;
+}
