--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -6,7 +6,7 @@ ul {
 
 body {
 	background-color: #e8ecef;
-	font-family: "comic sans ms";
+	font-family: "dunbar";
 }
 
 .myPic {
@@ -30,6 +30,7 @@ body {
 
 .myImage {
 	margin-top: 50px;
+	margin-bottom: 25px;
 	float: right;
 }
 
@@ -62,15 +63,35 @@ nav {
 
 .schools {
 	margin-left: 10%;
-	margin: 0;
+
 }
 
 .footer {
-	background: #5f5f5f;
-	color: white;
-	padding: 10px;
+    background: #5f5f5f;
+    color: white;
+   padding:0;
 }
 
 .footerText{
   margin:auto;
+}
+
+.edu_title{
+	margin-bottom: 4%;
+}
+
+.my_info{
+	float:right;
+}
+
+.jobsList:nth-child(odd) {
+  background-color: darkgrey;
+}
+.jobsList:nth-child(even) {
+  background-color:#7a7775;
+}
+
+.job_list{
+	margin-left: 3%;
+	margin-right: 3%;
 }
