--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -7,10 +7,16 @@ ul {
 body {
 	background-color: #e8ecef;
 	font-family: "dunbar";
+	margin-left: auto;
+	padding: 0;
+	overflow-x: hidden;
 }
 
-#myButton{
-	margin-left: 18%;
+#myButton {
+	margin-bottom: 31%;
+	padding: 12px;
+	margin-left: 10%;
+	margin-top: 10px;
 }
 .myPic {
 	max-width: 20rem;
@@ -50,10 +56,6 @@ body {
 }
 
 .jumbotron button {
-	margin-bottom: 31%;
-	padding: 12px;
-	margin-left: 10%;
-	margin-top: 10px;
 }
 
 nav {
@@ -66,35 +68,34 @@ nav {
 
 .schools {
 	margin-left: 10%;
-
 }
 
 .footer {
-    background: #5f5f5f;
-    color: white;
-   padding:0;
+	background: #5f5f5f;
+	color: white;
+	padding: 0;
 }
 
-.footerText{
-  margin:auto;
+.footerText {
+	margin: auto;
 }
 
-.edu_title{
+.edu_title {
 	margin-bottom: 4%;
 }
 
-.my_info{
-	float:right;
+.my_info {
+	float: right;
 }
 
 .jobsList:nth-child(odd) {
-  background-color: darkgrey;
+	background-color: darkgrey;
 }
 .jobsList:nth-child(even) {
-  background-color:#7a7775;
+	background-color: #7a7775;
 }
 
-.job_list{
+.job_list {
 	margin-left: 3%;
 	margin-right: 3%;
 }
