--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -7,9 +7,8 @@ ul {
 body {
 	background-color: #e8ecef;
 	font-family: "dunbar";
-	margin-left: auto;
-	padding: 0;
-	overflow-x: hidden;
+	/* margin-left: auto; */
+	/* padding: 0; */
 }
 
 #myButton {
@@ -44,7 +43,7 @@ body {
 }
 
 .title {
-	background-color: #e8ecef;
+	background-color: #a9a9a9;
 	margin: 0;
 }
 .job {
@@ -53,9 +52,6 @@ body {
 .jumbotron {
 	margin: 0;
 	position: relative;
-}
-
-.jumbotron button {
 }
 
 nav {
@@ -67,13 +63,16 @@ nav {
 }
 
 .schools {
-	margin-left: 10%;
+	/* margin-left: 10%; */
 }
 
 .footer {
 	background: #5f5f5f;
 	color: white;
-	padding: 0;
+	/* padding: 0; */
+}
+div.schools.row {
+	margin: 0;
 }
 
 .footerText {
@@ -85,17 +84,21 @@ nav {
 }
 
 .my_info {
-	float: right;
+	/* float: right; */
 }
 
 .jobsList:nth-child(odd) {
 	background-color: darkgrey;
 }
 .jobsList:nth-child(even) {
-	background-color: #7a7775;
+	background-color: #e8ecef;
 }
 
-.job_list {
-	margin-left: 3%;
-	margin-right: 3%;
-}
+/* .job_list {
+	/* margin-left: 3%;
+	margin-right: 3%; */
+/* } 
+/* 
+.black{
+	background:black;
+} */
