--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -34,12 +34,13 @@ body {
 
 .myJobs {
 	padding: 0;
+	/* background: white; */
 }
 
 .myImage {
 	margin-top: 50px;
 	margin-bottom: 25px;
-	float: right;
+	/* float: right; */
 }
 
 .title {
@@ -48,6 +49,7 @@ body {
 }
 .job {
 	margin-top: 30px;
+	background: white;
 }
 .jumbotron {
 	margin: 0;
