--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -24,12 +24,19 @@ body {
 
 .social {
   max-width: 94px;
-  margin-right: 5%;
 }
 
-.myLinks {
-  position: relative;
-  margin: auto;
+.socialMedia_links {
+  text-align: center;
+  /* position: absolute; */
+  bottom: 0;
+}
+
+.resume {
+  border: solid;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .myJobs {
@@ -58,7 +65,6 @@ body {
 }
 .jumbotron {
   margin: 0;
-  position: relative;
 }
 
 nav {
@@ -101,4 +107,8 @@ nav {
 .job_list {
   /* margin-left: 3%;
   margin-right: 3%; */
+}
+
+.jumbotronBottom {
+  position: relative;
 }
