--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -17,10 +17,10 @@ body {
   margin-left: 10%;
   margin-top: 10px;
 }
-.myPic {
+/* .myPic {
   max-width: 20rem;
   float: right;
-}
+} */
 
 .social {
   max-width: 94px;
@@ -30,6 +30,7 @@ body {
   text-align: center;
   /* position: absolute; */
   bottom: 0;
+  margin-top:60px;
 }
 
 .resume {
