--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -24,6 +24,7 @@ body {
 
 .social {
   max-width: 94px;
+  margin-left: 30px;
 }
 
 .socialMedia_links {
@@ -38,6 +39,8 @@ body {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  margin-top:69px;
+  color:black;
 }
 
 .myJobs {
@@ -45,6 +48,7 @@ body {
   /* background: white; */
 }
 .jobs {
+
   /* overflow: hidden; */
   /* position: absolute; */
 }
@@ -58,11 +62,22 @@ body {
 .title {
   margin: 0;
 }
+
+h6{
+  font-weight: bold;
+}
 .job {
   margin-top: 30px;
   background: white;
   height: auto;
   padding: 10%;
+  font-weight: bold;
+  border:solid;
+}
+
+.school{
+  background-color: white;
+  border:solid;
 }
 .jumbotron {
   margin: 0;
@@ -109,7 +124,14 @@ nav {
   /* margin-left: 3%;
   margin-right: 3%; */
 }
+.jobDescription{
 
+}
 .jumbotronBottom {
   position: relative;
+}
+
+.download_link{
+  color:black;
+  font-size: 1.22rem;
 }
