--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -40,6 +40,7 @@ body {
   margin-right: auto;
   margin-top:69px;
   color:black;
+  background:#5f5f5f;
 }
 
 .myJobs {
@@ -85,7 +86,8 @@ h6{
 }
 
 nav {
-  background-color: #e8ecef;
+  background-color: #5f5f5f;
+  color:white;
 }
 
 .emptySpace {
@@ -133,6 +135,6 @@ nav {
 }
 
 .download_link{
-  color:black;
+  color:white;
   font-size: 1.22rem;
 }
