--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -1,142 +1,119 @@
 @import url("https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css");
 
 ul {
-  list-style-type: none;
+	list-style-type: none;
 }
 
 body {
-  background-color: #e8ecef;
-  font-family: "dunbar";
-  /* margin-left: auto; */
-  /* padding: 0; */
-}
-
-#myButton {
-  margin-bottom: 31%;
-  padding: 12px;
-  margin-left: 10%;
-  margin-top: 10px;
-}
-.myPic {
-  border:solid;
-}
-
-.social {
-  max-width: 94px;
-  /* margin-left: 3px; */
-  border: solid;
-  color: black
-}
-
-.socialMedia_links {
-  text-align: center;
-  /* position: absolute; */
-  bottom: 0;
-  margin-top:60px;
-}
-
-.resume {
-  border: solid;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top:69px;
-  color:black;
-  background:#5f5f5f;
-}
-
-.myJobs {
-  padding: 0;
-  /* background: white; */
-}
-.jobs {
-
-  /* overflow: hidden; */
-  /* position: absolute; */
-}
-
-.myImage {
-  margin-top: 50px;
-  margin-bottom: 25px;
-  /* float: right; */
-}
-
-.title {
-  margin: 0;
-}
-
-h6{
-  font-weight: bold;
-}
-.job {
-  margin-top: 30px;
-  background: white;
-  height: auto;
-  padding: 10%;
-  font-weight: bold;
-  border:solid;
-}
-
-.school{
-  background-color: white;
-  border:solid;
-  margin-left: 7%;
-  margin-right: 7%;
-}
-.jumbotron {
-  margin: 0;
-}
-
-nav {
-  background-color: #5f5f5f;
-  color:white;
+	background-color: #e8ecef;
+	font-family: "dunbar";
 }
 
 .emptySpace {
-  background-color: #e8ecef;
+	background-color: #e8ecef;
 }
 
-.footer {
-  background: #5f5f5f;
-  color: white;
-  /* padding: 0; */
+.title {
+	margin: 0;
 }
 
-.footerText {
-  margin:0;
+/* Navbar */
+
+#email {
+	color: white;
 }
 
-.schools {
-  /* margin-left: 20%; */
+/* JumboTron */
+
+.jumbotronBottom {
+	position: relative;
+}
+
+.download_link {
+	color: white;
+	font-size: 1.22rem;
+}
+
+.jumbotron {
+	margin: 0;
+}
+#myButton {
+	margin-bottom: 31%;
+	padding: 12px;
+	margin-left: 10%;
+	margin-top: 10px;
+}
+.myPic {
+	border: solid;
+}
+
+.social {
+	max-width: 94px;
+	border: solid;
+	color: black;
+}
+
+.socialMedia_links {
+	text-align: center;
+	bottom: 0;
+	margin-top: 60px;
+}
+
+.resume {
+	border: solid;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 69px;
+	color: black;
+	background: #5f5f5f;
+}
+
+/* Jobs */
+.myJobs {
+	padding: 0;
+}
+
+.myImage {
+	margin-top: 50px;
+	margin-bottom: 25px;
+}
+
+h6 {
+	font-weight: bold;
+}
+.job {
+	margin-top: 30px;
+	background: white;
+	height: auto;
+	padding: 10%;
+	font-weight: bold;
+	border: solid;
+}
+
+/* Education */
+.school {
+	background-color: white;
+	border: solid;
+	margin-left: 7%;
+	margin-right: 7%;
 }
 
 .edu_title {
-  margin-bottom: 4%;
+	margin-bottom: 4%;
 }
 
-.my_info {
-  /* float: right; */
+nav {
+	background-color: #5f5f5f;
+	color: white;
 }
 
-.jobsList:nth-child(odd) {
-  background-color: darkgrey;
-}
-.jobsList:nth-child(even) {
-  background-color: #e8ecef;
-}
+/* Footer */
 
-.job_list {
-  /* margin-left: 3%;
-  margin-right: 3%; */
+.footer {
+	background: #5f5f5f;
+	color: white;
 }
-.jobDescription{
-
-}
-.jumbotronBottom {
-  position: relative;
-}
-
-.download_link{
-  color:white;
-  font-size: 1.22rem;
+.footerText {
+	margin: 0;
 }
